Fix double scroll issue

--- a/web/src/app/pages/task-page/task-page-left/task-page-left.component.scss
+++ b/web/src/app/pages/task-page/task-page-left/task-page-left.component.scss
@@ -27,7 +27,7 @@
 
 .task-list {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .spacer {
