--- a/web/src/app/tasklist/tasklist.component.scss
+++ b/web/src/app/tasklist/tasklist.component.scss
@@ -1,6 +1,6 @@
 :host {
     flex-grow: 1;
-    max-height: calc(100vh - (48px * 1));
+    max-height: calc(100vh - (48px * 2));
     display: flex;
     flex-direction: column;
 
